# tactil

./: .dockerignore  .gitignore  README.md  api_start.sh  cloud_processes.py  dev-tmux.sh  gaussian_map_plot.py  generate_stl.py  multiplane.py  plane.py  process_cloud.py  requirements.txt  ui_start.sh
.github/workflows/: docker-publish.yml
api/: VectorMap.py  __init__.py  app.py  box_outputs.json  generate_stl.py  image_operations.py  pcd_api.sh  pcd_operations.py  process_cloud.py  projective_geometry.py  setup.py  test_params_gen.py
api/debug_scripts/: draw_at_image_center.py  gaussian_map_plot_with_uv.py  headless_rendering_wip.py  process_pcd.py  rust_test.py  show_pcd.py  stl_api.sh  test_case.py  vector_map_conversion.py  view_birds_eye.json  view_near_iso.json
api/tactil_api/: SuppressStream.py  VectorMap.py  app.py  generate_stl.py  image_operations.py  pcd_operations.py  process_cloud.py
api/tactil_api/typings/: o3d_geometry.py
api/typings/: __init__.py
docker/: Dockerfile  Dockerfile.api  Dockerfile.ui  docker-compose.prod.yml  docker-compose.yml  run.sh  tmux-start.sh
docker/nginx/: Dockerfile  default.conf
tactil_rs/: Cargo.toml  README.md  pyproject.toml  tactil_rs.pyi
tactil_rs/src/: lib.rs  orthogonalize.rs  simplify.rs  test.py  vector_map.rs
tactil_rs/tests/: print_vec_map.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/public/: index.html  manifest.json
ui/src/: App.css  App.tsx  api.tsx  geometry.tsx
ui/src/api/: api.test.tsx  api.tsx
ui/src/interface/: Edit.css  Edit.tsx  Generate.tsx  Home.tsx  (+7 more)
(+23 files in other folders)
