[package]
name = "tactil_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tactil_rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "draw_vmap"

[dependencies]
ndarray = "0.15.4"
numpy = "0.16.2"
pyo3 = { version = "0.16.1", features = ["extension-module"] }
macroquad = "0.3.24"
